<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    tools:context=".view.match.activitiy.MatchActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/allLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_grey_400"
                android:minHeight="80dp"
                android:padding="18dp" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/navigation_bottom"
                    android:layout_weight="1"
                    android:background="@color/md_grey_200"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:background="@color/md_grey_200" />

                <RelativeLayout
                    android:id="@+id/emptyDataView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/image_nodata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_no_data" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_nodata"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:text="@string/no_data" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/noconectionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/image_noconectionView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/no_internet" />

                    <TextView
                        android:id="@+id/text_no_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image_noconectionView"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:text="@string/no_connection" />

                    <Button
                        android:id="@+id/refreshButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/text_no_internet"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/back_button"
                        android:text="@string/Refresh"
                        android:textColor="@color/md_white_1000" />
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/navigation_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/md_white_1000"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_200" />

                    <android.support.design.widget.BottomNavigationView
                        android:id="@+id/navigation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/md_white_1000"
                        android:paddingTop="@dimen/very_small_margin"
                        app:itemIconTint="@drawable/selector_main_menu"
                        app:itemTextColor="@drawable/selector_main_menu"
                        app:menu="@menu/navigation_drawer" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>